# psi-binning

./: .gitignore  README.md  binning_demo.ipynb  build_binning_demo.py  build_notebook.py  psi.py  psi_playground.ipynb  psi_plots.py  pyproject.toml  synthetic_data.py  woe.py
binning/: __init__.py  categorical.py  common.py  numeric.py
