[project]
name = "psi-binning-sandbox"
version = "0.1.0"
description = "Песочница для бининга фичей (PSI / WoE) и мониторинга стабильности"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "plotly>=6.0",
    "pyarrow>=17",
    "notebook>=7.0",
    "ipykernel>=6.29",
    "nbformat>=5.10",
]

[tool.uv]
package = false
